--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-
+            <img src="img/logo/ohmyfood@2x.svg">
         </header>
         <main>
 
