ajout block localisation et explorer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Geoffrey Chauwin" />
         <meta name="title" content="Ohmyfood par OpenClassrooms"/>
         <meta name="description" content="Projet Ohmyfood de OpenClassrooms, site de commande de repas en ligne"/>
+        <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer></script>
         <title>Ohmyfood</title>
     </head>
     <body>
@@ -13,7 +14,23 @@
             <img src="img/logo/ohmyfood@2x.svg">
         </header>
         <main>
-
+            <div class='localisation'>
+                <i class="fas fa-map-marker-alt"></i>
+                <h2>
+                    Paris, Belleville
+                </h2>
+            </div>
+            <div>
+                <h1>
+                    Réserver le menu qui vous convient
+                </h1>
+                <p>
+                    Découvrez des restaurants d'exception, sélectionnés par nos soins.
+                </p>
+                <button>
+                    Explorer nos restaurants
+                </button>
+            </div>
         </main>
         <footer>
 
