--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="author" content="Geoffrey Chauwin" />
         <meta name="title" content="Ohmyfood par OpenClassrooms"/>
-        <meta name="description" content="Projet Ohmyfood de OpenClassrooms, site de commande de repas en ligne"/>
+        <meta name="description" content="Projet Ohmyfood de OpenClassrooms, site de reservation de repas en ligne"/>
         <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer></script>
         <title>Ohmyfood</title>
     </head>
@@ -14,13 +14,13 @@
             <img src="img/logo/ohmyfood@2x.svg">
         </header>
         <main>
-            <div class='localisation'>
+            <div class="localisation">
                 <i class="fas fa-map-marker-alt"></i>
                 <h2>
                     Paris, Belleville
                 </h2>
             </div>
-            <div>
+            <div class="explorer">
                 <h1>
                     Réserver le menu qui vous convient
                 </h1>
@@ -30,6 +30,23 @@
                 <button>
                     Explorer nos restaurants
                 </button>
+            </div>
+            <div class="fonctionnement">
+                <h1>Fonctionnement</h1>
+                <ol>
+                    <li>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p>Choisissez un restaurant</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-list-ul"></i>
+                        <p>Composez votre menu</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-store"></i>
+                        <p>Dégustez au restaurant</p>
+                    </li>
+                </ol>
             </div>
         </main>
         <footer>
