--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <img src="img/logo/ohmyfood@2x.svg">
+            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
         </header>
         <main>
             <div class="localisation">
@@ -36,17 +36,90 @@
                 <ol>
                     <li>
                         <i class="fas fa-mobile-alt"></i>
-                        <p>Choisissez un restaurant</p>
+                        <p>
+                            Choisissez un restaurant
+                        </p>
                     </li>
                     <li>
                         <i class="fas fa-list-ul"></i>
-                        <p>Composez votre menu</p>
+                        <p>
+                            Composez votre menu
+                        </p>
                     </li>
                     <li>
                         <i class="fas fa-store"></i>
-                        <p>Dégustez au restaurant</p>
+                        <p>
+                            Dégustez au restaurant
+                        </p>
                     </li>
                 </ol>
+            </div>
+            <div class='restaurants'>
+                <h1>
+                    Restaurants
+                </h1>
+                <ul class='restaurantsList'>
+                    <li class='restaurant'>
+                        <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <div class='restaurantDetails'>
+                            <div>
+                                <h3>
+                                    La palette du goût
+                                </h3>
+                                <p>
+                                    Ménilmontant
+                                </p>
+                            </div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </li>
+                    <li class='restaurant'>
+                        <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <div class='restaurantDetails'>
+                            <div>
+                                <h3>
+                                    La note enchantée
+                                </h3>
+                                <p>
+                                    Charonne
+                                </p>
+                            </div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </li>
+                    <li class='restaurant'>
+                        <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                        <div class='restaurantDetails'>
+                            <div>
+                                <h3>
+                                    À la française
+                                </h3>
+                                <p>
+                                    Cité Rouge
+                                </p>
+                            </div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </li>
+                    <li class='restaurant'>
+                        <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                        <div class='restaurantDetails'>
+                            <div>
+                                <h3>
+                                    Le délice des sens
+                                </h3>
+                                <p>
+                                    Folie-Méricourt
+                                </p>
+                            </div>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </main>
         <footer>
