--- a/index.html
+++ b/index.html
@@ -123,7 +123,21 @@
             </div>
         </main>
         <footer>
-
+            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood">
+            <a href="#">
+                <i class="fas fa-utensils"></i>
+                Proposer un restaurant
+            </a>
+            <a href="#">
+                <i class="fas fa-hands-helping"></i>
+                Devenir partenaire
+            </a>
+            <a href="#">
+                Mentions légales
+            </a>
+            <a href="#">
+                Contact
+            </a>
         </footer>
     </body>
 </html>
