--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <ul class='restaurantsList'>
                     <li class='restaurant'>
                         <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                        <span>
+                            Nouveau
+                        </span>
                         <div class='restaurantDetails'>
                             <div>
                                 <h3>
@@ -76,6 +79,9 @@
                     </li>
                     <li class='restaurant'>
                         <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                        <span>
+                            Nouveau
+                        </span>
                         <div class='restaurantDetails'>
                             <div>
                                 <h3>
