--- a/index.html
+++ b/index.html
@@ -60,70 +60,78 @@
                 </h1>
                 <ul class='restaurantsList'>
                     <li class='restaurant'>
-                        <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                        <span>
-                            Nouveau
-                        </span>
-                        <div class='restaurantDetails'>
-                            <div>
-                                <h3>
-                                    La palette du goût
-                                </h3>
-                                <p>
-                                    Ménilmontant
-                                </p>
+                        <a href="./la-palette-du-gout.html">
+                            <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                            <span>
+                                Nouveau
+                            </span>
+                            <div class='restaurantDetails'>
+                                <div>
+                                    <h3>
+                                        La palette du goût
+                                    </h3>
+                                    <p>
+                                        Ménilmontant
+                                    </p>
+                                </div>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </div>
+                        </a>
                     </li>
                     <li class='restaurant'>
-                        <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                        <span>
-                            Nouveau
-                        </span>
-                        <div class='restaurantDetails'>
-                            <div>
-                                <h3>
-                                    La note enchantée
-                                </h3>
-                                <p>
-                                    Charonne
-                                </p>
+                        <a href="./la-note-enchantee.html">
+                            <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                            <span>
+                                Nouveau
+                            </span>
+                            <div class='restaurantDetails'>
+                                <div>
+                                    <h3>
+                                        La note enchantée
+                                    </h3>
+                                    <p>
+                                        Charonne
+                                    </p>
+                                </div>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </div>
+                        </a>
                     </li>
                     <li class='restaurant'>
-                        <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                        <div class='restaurantDetails'>
-                            <div>
-                                <h3>
-                                    À la française
-                                </h3>
-                                <p>
-                                    Cité Rouge
-                                </p>
+                        <a href="./a-la-francaise.html">
+                            <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                            <div class='restaurantDetails'>
+                                <div>
+                                    <h3>
+                                        À la française
+                                    </h3>
+                                    <p>
+                                        Cité Rouge
+                                    </p>
+                                </div>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </div>
+                        </a>
                     </li>
                     <li class='restaurant'>
-                        <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                        <div class='restaurantDetails'>
-                            <div>
-                                <h3>
-                                    Le délice des sens
-                                </h3>
-                                <p>
-                                    Folie-Méricourt
-                                </p>
+                        <a href="./le-delice-des-sens.html">
+                            <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            <div class='restaurantDetails'>
+                                <div>
+                                    <h3>
+                                        Le délice des sens
+                                    </h3>
+                                    <p>
+                                        Folie-Méricourt
+                                    </p>
+                                </div>
+                                <i class="far fa-heart"></i>
+                                <i class="fas fa-heart"></i>
                             </div>
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
-                        </div>
+                        </a>
                     </li>
                 </ul>
             </div>
