ajout scss mainPage

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -10,198 +10,238 @@
         <title>Ohmyfood - La note enchantée</title>
     </head>
     <body>
-        <header>
-            <a href="./index.html">
+        <header class="header">
+            <a href="./index.html" class="header__backButton">
                 <i class="fas fa-arrow-left"></i>
             </a>
-            <a href="./index.html">
+            <a href="./index.html" class="header__logo">
                 <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
             </a>
         </header>
-        <main>
-            <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-            <div>
-                <div>
-                    <h1>
-                        La note enchantée
-                    </h1>
-                    <i class="far fa-heart"></i>
-                    <i class="fas fa-heart"></i>
+        <main class="restaurantPage">
+            <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="restaurantPage__img">
+            <div class="restaurantPage__title">
+                <h1>
+                    La note enchantée
+                </h1>
+                <i class="far fa-heart restaurant__heart--empty"></i>
+                <i class="fas fa-heart restaurant__heart--full"></i>
+            </div>
+            <div class="restaurantPage__menu">
+                <div class="menuCategory">
+                    <h2 class="menuCategory__title">
+                        ENTRÉES
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Ravioles de foie gras
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Accompagnés de leur crème à la truffe
+                                </p>
+                                <p class="menuCard__price">
+                                    25€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Caviar osciètre
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Sur blini à la farine de blé noir
+                                </p>
+                                <p class="menuCard__price">
+                                    35€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Homard et espuma de potiron
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Mariné aux zestes d'orange
+                                </p>
+                                <p class="menuCard__price">
+                                    20€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Foie gras de canard cuit entier
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Confiture de figue et pain toasté
+                                </p>
+                                <p class="menuCard__price">
+                                    35€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="menuCategory">
+                    <h2>
+                        PLATS
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Noix de coquilles Saint-Jacques
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Sur lit de purée de céleri-rave
+                                </p>
+                                <p class="menuCard__price">
+                                    40€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Langoustine poêlée
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Purée de patate douce
+                                </p>
+                                <p class="menuCard__price">
+                                    35€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Mijoté de queue de boeuf 
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Et riz sauvage aux zestes de citron
+                                </p>
+                                <p class="menuCard__price">
+                                    44€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="menuCategory">
+                    <h2>
+                        DESSERTS
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Macaron noisette et chocolat
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Glace au caramel brun et sel de Guérande
+                                </p>
+                                <p class="menuCard__price">
+                                    18€
+                                </p>
+                                </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Baba au rhum revisité
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Avec son coulis de citron
+                                </p>
+                                <p class="menuCard__price">
+                                    22€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Tarte au citron meringuée 
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Déstructurée
+                                </p>
+                                <p class="menuCard__price">
+                                    23€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
                 </div>
             </div>
-            <div>
-                <h2>
-                    ENTRÉES
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Ravioles de foie gras
-                        </h3>
-                        <div>
-                            <p>
-                                Accompagnés de leur crème à la truffe
-                            </p>
-                            <p>
-                                25€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Caviar osciètre
-                        </h3>
-                        <div>
-                            <p>
-                                Sur blini à la farine de blé noir
-                            </p>
-                            <p>
-                                35€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Homard et espuma de potiron
-                        </h3>
-                        <div>
-                            <p>
-                                Mariné aux zestes d'orange
-                            </p>
-                            <p>
-                                20€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Foie gras de canard cuit entier
-                        </h3>
-                        <div>
-                            <p>
-                                Confiture de figue et pain toasté
-                            </p>
-                            <p>
-                                35€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
-                <h2>
-                    PLATS
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Noix de coquilles Saint-Jacques
-                        </h3>
-                        <div>
-                            <p>
-                                Sur lit de purée de céleri-rave
-                            </p>
-                            <p>
-                                40€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Langoustine poêlée
-                        </h3>
-                        <div>
-                            <p>
-                                Purée de patate douce
-                            </p>
-                            <p>
-                                35€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Mijoté de queue de boeuf 
-                        </h3>
-                        <div>
-                            <p>
-                                Et riz sauvage aux zestes de citron
-                            </p>
-                            <p>
-                                44€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
-                <h2>
-                    DESSERTS
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Macaron noisette et chocolat
-                        </h3>
-                        <div>
-                            <p>
-                                Glace au caramel brun et sel de Guérande
-                            </p>
-                            <p>
-                                18€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Baba au rhum revisité
-                        </h3>
-                        <div>
-                            <p>
-                                Avec son coulis de citron
-                            </p>
-                            <p>
-                                22€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Tarte au citron meringuée 
-                        </h3>
-                        <div>
-                            <p>
-                                Déstructurée
-                            </p>
-                            <p>
-                                23€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
+            <div class="restaurantPage__orderButton">
                 <button>
                     Commander
                 </button>
             </div>
         </main>
-        <footer>
-            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood">
-            <a href="#">
-                <i class="fas fa-utensils"></i>
-                Proposer un restaurant
-            </a>
-            <a href="#">
-                <i class="fas fa-hands-helping"></i>
-                Devenir partenaire
-            </a>
-            <a href="#">
-                Mentions légales
-            </a>
-            <a href="#">
-                Contact
-            </a>
+        <footer class="footer">
+            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood" class="footer__logo">
+            <ul class="footer__links">
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-utensils"></i>
+                        Proposer un restaurant
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-hands-helping"></i>
+                        Devenir partenaire
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Mentions légales
+                    </a>
+                <li>
+                </li>
+                    <a href="#" class="footer__link">
+                        Contact
+                    </a>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
