--- a/index.html
+++ b/index.html
@@ -8,45 +8,48 @@
         <meta name="description" content="Projet Ohmyfood de OpenClassrooms, site de reservation de repas en ligne"/>
         <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer></script>
         <title>Ohmyfood</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
+        <header class="header">
+            <a href="./index.html" class="header__logo">
+                <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
+            </a>
         </header>
-        <main>
+        <main class="mainPage">
             <div class="localisation">
-                <i class="fas fa-map-marker-alt"></i>
-                <h2>
+                <i class="fas fa-map-marker-alt localisation__icon"></i>
+                <h2 class="localisation__title">
                     Paris, Belleville
                 </h2>
             </div>
-            <div class="explorer">
-                <h1>
-                    Réserver le menu qui vous convient
+            <div class="exploration">
+                <h1 class="exploration__title">
+                    Réservez le menu qui vous convient
                 </h1>
                 <p>
                     Découvrez des restaurants d'exception, sélectionnés par nos soins.
                 </p>
-                <button>
+                <button class="exploration__button">
                     Explorer nos restaurants
                 </button>
             </div>
             <div class="fonctionnement">
-                <h1>Fonctionnement</h1>
-                <ol>
-                    <li>
+                <h1 class="fonctionnement__title">Fonctionnement</h1>
+                <ol class="fonctionnement__stepsList">
+                    <li class="fonctionnement__step">
                         <i class="fas fa-mobile-alt"></i>
                         <p>
                             Choisissez un restaurant
                         </p>
                     </li>
-                    <li>
+                    <li class="fonctionnement__step">
                         <i class="fas fa-list-ul"></i>
                         <p>
                             Composez votre menu
                         </p>
                     </li>
-                    <li>
+                    <li class="fonctionnement__step">
                         <i class="fas fa-store"></i>
                         <p>
                             Dégustez au restaurant
@@ -54,104 +57,132 @@
                     </li>
                 </ol>
             </div>
-            <div class='restaurants'>
-                <h1>
+            <div class="restaurants">
+                <h1 class="restaurants__title">
                     Restaurants
                 </h1>
-                <ul class='restaurantsList'>
-                    <li class='restaurant'>
+                <ul class="restaurants__list">
+                    <li class="restaurant">
                         <a href="./la-palette-du-gout.html">
-                            <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                            <span>
-                                Nouveau
-                            </span>
-                            <div class='restaurantDetails'>
+                            <div class="restaurant__img">
+                                <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+                                <span class="restaurant_new">
+                                    Nouveau
+                                </span>
+                            </div>
+                            <div class="restaurant__details">
                                 <div>
-                                    <h3>
+                                    <h3 class="restaurant__title">
                                         La palette du goût
                                     </h3>
-                                    <p>
+                                    <p class="restaurant__localisation">
                                         Ménilmontant
                                     </p>
                                 </div>
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="restaurant__heart">
+                                    <i class="far fa-heart restaurant__heart--empty"></i>
+                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                </div>
                             </div>
                         </a>
                     </li>
-                    <li class='restaurant'>
+                    <li class="restaurant">
                         <a href="./la-note-enchantee.html">
-                            <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                            <span>
-                                Nouveau
-                            </span>
-                            <div class='restaurantDetails'>
+                            <div class="restaurant__img">
+                                <img src="img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
+                                <span class="restaurant_new">
+                                    Nouveau
+                                </span>
+                            </div>
+                            <div class="restaurant__details">
                                 <div>
-                                    <h3>
+                                    <h3 class="restaurant__title">
                                         La note enchantée
                                     </h3>
-                                    <p>
+                                    <p class="restaurant__localisation">
                                         Charonne
                                     </p>
                                 </div>
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="restaurant__heart">
+                                    <i class="far fa-heart restaurant__heart--empty"></i>
+                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                </div>
                             </div>
                         </a>
                     </li>
-                    <li class='restaurant'>
+                    <li class="restaurant">
                         <a href="./a-la-francaise.html">
-                            <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                            <div class='restaurantDetails'>
+                            <div class="restaurant__img">
+                                <img src="img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+                            </div>
+                            <div class="restaurant__details">
                                 <div>
-                                    <h3>
+                                    <h3 class="restaurant__title">
                                         À la française
                                     </h3>
-                                    <p>
+                                    <p class="restaurant__localisation">
                                         Cité Rouge
                                     </p>
                                 </div>
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="restaurant__heart">
+                                    <i class="far fa-heart restaurant__heart--empty"></i>
+                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                </div>
                             </div>
                         </a>
                     </li>
-                    <li class='restaurant'>
+                    <li class="restaurant">
                         <a href="./le-delice-des-sens.html">
-                            <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                            <div class='restaurantDetails'>
+                            <div class="restaurant__img">
+                                <img src="img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
+                            </div>
+                            <div class="restaurant__details">
                                 <div>
-                                    <h3>
+                                    <h3 class="restaurant__title">
                                         Le délice des sens
                                     </h3>
-                                    <p>
+                                    <p class="restaurant__localisation">
                                         Folie-Méricourt
                                     </p>
                                 </div>
-                                <i class="far fa-heart"></i>
-                                <i class="fas fa-heart"></i>
+                                <div class="restaurant__heart">
+                                    <i class="far fa-heart restaurant__heart--empty"></i>
+                                    <i class="fas fa-heart restaurant__heart--full"></i>
+                                </div>
                             </div>
                         </a>
                     </li>
                 </ul>
             </div>
         </main>
-        <footer>
-            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood">
-            <a href="#">
-                <i class="fas fa-utensils"></i>
-                Proposer un restaurant
-            </a>
-            <a href="#">
-                <i class="fas fa-hands-helping"></i>
-                Devenir partenaire
-            </a>
-            <a href="#">
-                Mentions légales
-            </a>
-            <a href="#">
-                Contact
-            </a>
+        <footer class="footer">
+            <h2 class="footer__title">
+                ohmyfood
+            </h2>    
+            <ul class="footer__links">
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-utensils"></i>
+                        Proposer un restaurant
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-hands-helping"></i>
+                        Devenir partenaire
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Mentions légales
+                    </a>
+                <li>
+                </li>
+                    <a href="#" class="footer__link">
+                        Contact
+                    </a>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
