--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -10,185 +10,222 @@
         <title>Ohmyfood - La palette du goût</title>
     </head>
     <body>
-        <header>
-            <a href="./index.html">
+        <header class="header">
+            <a href="./index.html" class="header__backButton">
                 <i class="fas fa-arrow-left"></i>
             </a>
-            <a href="./index.html">
+            <a href="./index.html" class="header__logo">
                 <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood logo">
             </a>
         </header>
-        <main>
-            <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-            <div>
-                <div>
-                    <h1>
-                        La palette du goût
-                    </h1>
-                    <i class="far fa-heart"></i>
-                    <i class="fas fa-heart"></i>
+        <main class="restaurantPage">
+            <img src="img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="restaurantPage__img">
+            <div class="restaurantPage__title">
+                <h1>
+                    La palette du goût
+                </h1>
+                <i class="far fa-heart restaurant__heart--empty"></i>
+                <i class="fas fa-heart restaurant__heart--full"></i>
+            </div>
+            <div class="restaurantPage__menu">
+                <div class="menuCategory">
+                    <h2 class="menuCategory__title">
+                        ENTRÉES
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Fricassée d'escargot
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Au piment d'espelette
+                                </p>
+                                <p class="menuCard__price">
+                                    25€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Foie gras de canard mi-cuit
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Et ses copeaux de truffe noire
+                                </p>
+                                <p class="menuCard__price">
+                                    35€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Oeuf au plat
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Assaisonné à la truffe sur lit de caviar
+                                </p>
+                                <p class="menuCard__price">
+                                    20€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="menuCategory">
+                    <h2>
+                        PLATS
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Filet de boeuf aux herbes
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Accompagné de sa ribambelle de légumes
+                                </p>
+                                <p class="menuCard__price">
+                                    40€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Parmentier de queue de boeuf
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    À la truffe noire sur sa purée de panais
+                                </p>
+                                <p class="menuCard__price">
+                                    35€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Filet de turbot
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Aux agrumes
+                                </p>
+                                <p class="menuCard__price">
+                                    44€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+                <div class="menuCategory">
+                    <h2>
+                        DESSERTS
+                    </h2>
+                    <ol>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Paris-Brest
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Revisité
+                                </p>
+                                <p class="menuCard__price">
+                                    18€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Macaron au chocolat d'exception
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Et glace à la vanille de Madagascar
+                                </p>
+                                <p class="menuCard__price">
+                                    22€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                        <li class="menuCard">
+                            <h3 class="menuCard__title">
+                                Mousse au chocolat
+                            </h3>
+                            <div class="menuCard__details">
+                                <p>
+                                    Au piment d'Espelette et à la truffe noire
+                                </p>
+                                <p class="menuCard__price">
+                                    23€
+                                </p>
+                            </div>
+                            <div class="menuCard__checkIcon">
+                                <i class="fas fa-check"></i>
+                            </div>
+                        </li>
+                    </ol>
                 </div>
             </div>
-            <div>
-                <h2>
-                    ENTRÉES
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Fricassée d'escargot
-                        </h3>
-                        <div>
-                            <p>
-                                Au piment d'espelette
-                            </p>
-                            <p>
-                                25€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Foie gras de canard mi-cuit
-                        </h3>
-                        <div>
-                            <p>
-                                Et ses copeaux de truffe noire
-                            </p>
-                            <p>
-                                35€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Oeuf au plat
-                        </h3>
-                        <div>
-                            <p>
-                                Assaisonné à la truffe sur lit de caviar
-                            </p>
-                            <p>
-                                20€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
-                <h2>
-                    PLATS
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Filet de boeuf aux herbes
-                        </h3>
-                        <div>
-                            <p>
-                                Accompagné de sa ribambelle de légumes
-                            </p>
-                            <p>
-                                40€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Parmentier de queue de boeuf
-                        </h3>
-                        <div>
-                            <p>
-                                À la truffe noire sur sa purée de panais
-                            </p>
-                            <p>
-                                35€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Filet de turbot
-                        </h3>
-                        <div>
-                            <p>
-                                Aux agrumes
-                            </p>
-                            <p>
-                                44€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
-                <h2>
-                    DESSERTS
-                </h2>
-                <ol>
-                    <li>
-                        <h3>
-                            Paris-Brest
-                        </h3>
-                        <div>
-                            <p>
-                                Revisité
-                            </p>
-                            <p>
-                                18€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Macaron au chocolat d'exception
-                        </h3>
-                        <div>
-                            <p>
-                                Et glace à la vanille de Madagascar
-                            </p>
-                            <p>
-                                22€
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>
-                            Mousse au chocolat
-                        </h3>
-                        <div>
-                            <p>
-                                Au piment d'Espelette et à la truffe noire
-                            </p>
-                            <p>
-                                23€
-                            </p>
-                        </div>
-                    </li>
-                </ol>
-            </div>
-            <div>
+            <div class="restaurantPage__orderButton">
                 <button>
                     Commander
                 </button>
             </div>
         </main>
-        <footer>
-            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood">
-            <a href="#">
-                <i class="fas fa-utensils"></i>
-                Proposer un restaurant
-            </a>
-            <a href="#">
-                <i class="fas fa-hands-helping"></i>
-                Devenir partenaire
-            </a>
-            <a href="#">
-                Mentions légales
-            </a>
-            <a href="#">
-                Contact
-            </a>
+        <footer class="footer">
+            <img src="img/logo/ohmyfood@2x.svg" alt="Ohmyfood" class="footer__logo">
+            <ul class="footer__links">
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-utensils"></i>
+                        Proposer un restaurant
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        <i class="fas fa-hands-helping"></i>
+                        Devenir partenaire
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="footer__link">
+                        Mentions légales
+                    </a>
+                <li>
+                </li>
+                    <a href="#" class="footer__link">
+                        Contact
+                    </a>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
